# linera-protocol

./: .dockerignore  .editorconfig  .env.example  .env.indexer-test  .gcloudignore  .git-blame-ignore-revs  .gitignore  .gitmodules  .prettierrc.json  .taplo.toml  2026-06-08-block-header-commitment-design.md  2026-06-08-block-header-commitment-plan.md  2026-06-09-bridge-upgradeability-design.md  AGENTS.md  CLI.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  Dockerfile  Dockerfile.aarch64  Dockerfile.local  Dockerfile.local-aarch64  INSTALL.md  Linera  Makefile  README-ur.md  README.fr.md  README.md  Testneter  build-image.yaml  build.bash  chain-history-refactor-spec.md  clippy.toml  crates.js  default.nix  flake.nix  help.html  install_hooks.sh  lina  linera-protocol.code-workspace  (+22 more)
dummy/: Cargo.toml
dummy/src/: main.rs
examples/: Cargo.toml  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  vite.config.ts
examples/.cargo/: config.toml
examples/agent/: .gitignore  Cargo.toml  README.md
examples/amm/: Cargo.toml  README.md
examples/assets/: style.css
examples/bridge-demo/: .env.example  README.md  foundry.toml  index.html  package.json  setup.sh  spawn-relayer.sh  vite.config.ts
examples/call-evm-counter/: Cargo.toml
examples/contract-call/: Cargo.toml
examples/controller/: Cargo.toml  README.md
examples/counter/: Cargo.toml  README.md  deploy.sh  index.html  package.json  playwright.config.ts  vite.config.ts
examples/counter-graphql/: Cargo.toml
examples/counter-no-graphql/: Cargo.toml  README.md
examples/counter2/: Cargo.toml
examples/create-and-call/: Cargo.toml  README.md
examples/crowd-funding/: Cargo.toml  README.md
examples/delegated-fungible/: Cargo.toml  README.md
examples/ethereum-tracker/: Cargo.toml
examples/evm-bridge/: Cargo.toml
examples/formats-registry/: Cargo.toml  README.md
examples/fungible/: Cargo.toml  README.md  deploy.sh  package.json
examples/game-of-life-challenge/: Cargo.toml  README.md
examples/gen-nft/: Cargo.toml  README.md
examples/hex-game/: Cargo.toml  README.md
examples/llm/: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
examples/matching-engine/: Cargo.toml  README.md
examples/meta-counter/: Cargo.toml  README.md
examples/native-fungible/: Cargo.toml  README.md  deploy.sh  index.html  package.json  playwright.config.ts  script.ts
examples/non-fungible/: Cargo.toml  README.md
examples/panicker/: Cargo.toml  README.md  index.html  package.json  tsconfig.json  vite.config.ts
examples/publish-read-data-blob/: README.md
examples/reentrant-counter/: Cargo.toml  README.md
examples/rfq/: Cargo.toml  README.md
examples/social/: Cargo.toml  README.md
examples/task-processor/: Cargo.toml
examples/test-runtime/: Cargo.toml  README.md
examples/time-expiry/: Cargo.toml
examples/track-instantiation/: Cargo.toml
examples/track-instantiation-load-operation/: Cargo.toml
examples/wrapped-fungible/: Cargo.toml  README.md
linera-base/: Cargo.toml  README.md  build.rs  generate-format.sh  git_commit.txt  graphql_hash.txt  rpc_hash.txt  update_version_info.sh  versions.sh  wit_hash.txt
linera-base/examples/: generate-format.rs
linera-base/src/: abi.rs  chain.rs  codec.rs  command.rs  committee.rs  crypto.rs  data_types.rs  dyn_convert.rs  error.rs  execution.rs  graphql.rs  hashed.rs  http.rs  identifiers.rs  lib.rs  limited_writer.rs  locks.rs  manager.rs  messages.rs  ownership.rs  policy.rs  port.rs  prometheus_util.rs  rpc.rs  smart_contract.rs  sync.rs  system.rs  task.rs  task_processor.rs  time.rs  tracing.rs  tracing_opentelemetry.rs  tracing_otel.rs  tracing_web.rs  tree.rs  trie.rs  unit_tests.rs  value_cache.rs  version.rs  version_info.rs  (+1 more)
linera-base/tests/: command_tests.rs  opentelemetry_tests.rs
linera-bridge/: Cargo.toml  DEPLOYMENT.md  Makefile  README.md  build.rs  rust-toolchain.toml
linera-bridge-init/: Cargo.toml
linera-bridge-init/src/: main.rs
linera-bridge/adr/: evm_to_linera.md
linera-bridge/deploy/: .base.mainnet.env  .base.sepolia.env  README.md
linera-bridge/src/: BridgeTypes.sol  LightClient.sol  Microchain.sol  abi.rs  block_proof.rs  contracts.rs  evm_client.rs  fungible_bridge.rs  gas.rs  lib.rs  main.rs  (+7 more)
linera-cache/: Cargo.toml  README.md  build.rs
linera-chain/: Cargo.toml  README.md  build.rs  gitp
linera-cli/: Cargo.toml
linera-client/: Cargo.toml  README.md  build.rs
linera-core/: Cargo.toml  README.md  build.rs  clippy.toml
linera-eip712-derive/: Cargo.toml
linera-ethereum/: Cargo.toml  README.md
linera-examples/: Cargo.toml
linera-execution/: Cargo.toml  README.md  build.rs  contract.wit  contract_system_api.wit  queryable_system.wit  service.wit  service_system_api.wit  update_wasm_fixtures.sh  view_system.wit  view_system_api.wit  writable_system.wit
linera-explorer/: .gitignore  Cargo.toml  README.md  build.rs  codegen_indexer.ts  codegen_operations.ts  codegen_service.ts  index.html  package-lock.json  package.json  rust-toolchain.toml  tsconfig.json  vite.config.ts  webpack.config.js
linera-exporter/: Cargo.toml  README.md  build.rs
linera-faucet/: Cargo.toml  README.md
linera-graphql-client/: Cargo.toml  README.md
linera-indexer/: Cargo.toml  README.md
linera-json-wallet/: Cargo.toml  README.md
linera-metrics/: Cargo.toml  README.md
linera-persistent/: Cargo.toml  README.md  build.rs
linera-rpc/: Cargo.toml  README.md  binary_formats.yaml  build.rs  generate-format.sh
linera-sdk/: Cargo.toml  README.md  application.wit  build.rs  contract.wit  contract_system_api.wit  mock_system_api.wit  queryable_system.wit  service.wit  service_system_api.wit  system.wit  view_system.wit  view_system_api.wit  writable_system.wit
linera-sdk-derive/: Cargo.toml  README.md
linera-service/: Cargo.toml  README.md  build.rs  wasm32-mvp.json  wasm32-unknown-js-web.json  wasm32-web-unknown.json
linera-service-graphql-client/: Cargo.toml  README.md
linera-shared-storage/: Cargo.toml  README.md
linera-storage-runtime/: Cargo.toml  README.md  build.rs
(+180554 files in other folders)
