[workspace]
members = [
    "linera-base",
    "linera-chain",
    "linera-client",
    "linera-core",
    "linera-ethereum",
    "linera-execution",
    "linera-explorer",
    "linera-faucet/client",
    "linera-faucet/server",
    "linera-indexer/example",
    "linera-indexer/graphql-client",
    "linera-indexer/lib",
    "linera-indexer/plugins",
    "linera-metrics",
    "linera-persistent",
    "linera-rpc",
    "linera-sdk",
    "linera-sdk-derive",
    "linera-service",
    "linera-service-graphql-client",
    "linera-storage",
    "linera-storage-service",
    "linera-summary",
    "linera-views",
    "linera-views-derive",
    "linera-witty",
    "linera-witty-macros",
    "linera-witty/test-modules",

    "web/@linera/client",
]
default-members = [
    "linera-base",
    "linera-chain",
    "linera-client",
    "linera-core",
    "linera-ethereum",
    "linera-execution",
    "linera-explorer",
    "linera-faucet/client",
    "linera-faucet/server",
    "linera-indexer/example",
    "linera-indexer/graphql-client",
    "linera-indexer/lib",
    "linera-indexer/plugins",
    "linera-metrics",
    "linera-rpc",
    "linera-sdk",
    "linera-sdk-derive",
    "linera-service",
    "linera-service-graphql-client",
    "linera-storage",
    "linera-storage-service",
    "linera-summary",
    "linera-views",
    "linera-views-derive",
    "linera-witty",
    "linera-witty-macros",
    "linera-witty/test-modules",
]
exclude = ["examples", "scripts"]
resolver = "2"

[workspace.package]
version = "0.16.0"
authors = ["Linera <contact@linera.io>"]
repository = "https://github.com/linera-io/linera-protocol"
homepage = "https://linera.dev"
license = "Apache-2.0"
edition = "2021"

[workspace.dependencies]
allocative = "0.3.4"
alloy = { version = "1.0.5", default-features = false }
alloy-primitives = { version = "1.3.0", default-features = false, features = [
    "serde",
    "k256",
] }
alloy-sol-types = "1.1.2"
anyhow = "1.0.80"
assert_matches = "1.5.0"
async-graphql = "=7.0.17"
async-graphql-axum = "=7.0.17"
async-graphql-derive = "=7.0.17"
async-lock = "3.3.0"
async-trait = "0.1.77"
async-tungstenite = { version = "0.22", features = ["tokio-runtime"] }
aws-smithy-types = "1.3.1"
axum = "0.8.4"
base64 = "0.22.0"
bcs = "0.1.6"
bincode = "1.3.3"
bytes = "1.5.0"
cargo_metadata = "0.18.1"
cargo_toml = "0.19.2"
cfg-if = "1.0.0"
cfg_aliases = "0.2.1"
chrono = { version = "0.4.35", default-features = false }
clap = { version = "4", features = ["cargo", "derive", "env"] }
clap-markdown = "0.1.3"
clap_complete = "4"
clio = "0.3.5"
colored = "2.1.0"
console_error_panic_hook = "0.1.7"
convert_case = "0.6.0"
criterion = { version = "0.5.1", default-features = false }
custom_debug_derive = "0.6.1"
deluxe = "0.5.0"
derive_more = "1.0.0"
dirs = "5.0.1"
dyn-clone = "1.0.17"
ed25519-dalek = { version = "2.1.1", default-features = false, features = [
    "batch",
    "fast",
    "serde",
    "zeroize",
] }
either = "1.10.0"
flarch = "0.7.0"
frunk = "0.4.2"
fs-err = "2.11.0"
fs4 = "0.8.2"
fs_extra = "1.3.0"
futures = "0.3.30"
generic-array = { version = "0.14.7", features = ["serde"] }
getrandom = "0.2.12"
git2 = "0.19.0"
glob = "0.3.1"
gloo-utils = "0.2.0"
hdrhistogram = "7.5.4"
heck = "0.4.1"
hex = "0.4.3"
http = "1.1.0"
humantime = "2.1.0"
indexed-db = "0.4.2"
insta = "1.36.1"
is-terminal = "0.4.12"
itertools = "0.14.0"
jemalloc_pprof = "0.8.1"
js-sys = "0.3.70"
k256 = { version = "0.13.4", default-features = false, features = [
    "ecdsa",
    "pem",
    "sha256",
    "serde",
    "arithmetic",
] }
k8s-openapi = { version = "0.21.1", features = ["v1_28"] }
kube = "0.88.1"
linera-kywasmtime = "0.1.0"
linked-hash-map = "0.5.6"
log = "0.4.21"
lru = "0.12.3"
mini-moka = "0.10.3"
nonzero_lit = "0.1.2"
num-bigint = "0.4.3"
num-format = "0.4.4"
num-traits = "0.2.18"
octocrab = "0.42.1"
oneshot = "0.1.6"
opentelemetry = { version = "0.30.0", features = ["trace"] }
opentelemetry-http = "0.30.0"
opentelemetry-otlp = { version = "0.30.0", features = [
    "grpc-tonic",
    "trace",
    "tls-roots",
] }
opentelemetry_sdk = { version = "0.30.0", features = ["trace", "rt-tokio"] }
papaya = "0.1.5"
pathdiff = "0.2.1"
port-selector = "0.1.6"
prettyplease = "0.2.16"
proc-macro-error = "1.0.4"
proc-macro2 = "1.0"
prometheus = "0.13.3"
prometheus-parse = "0.2.5"
proptest = { version = "1.6.0", default-features = false, features = ["alloc"] }
prost = "0.14"
quick_cache = "0.6.13"
quote = "1.0"
rand = { version = "0.8.5", default-features = false, features = ["std_rng"] }
rand_chacha = { version = "0.3.1", default-features = false }
rand_distr = { version = "0.4.3", default-features = false }
rcgen = "0.12.1"
reqwest = { version = "0.11.24", default-features = false, features = [
    "rustls-tls",
] }
revm = { version = "24.0.1", default-features = false, features = [
    "std",
    "kzg-rs",
    "secp256k1",
    "portable",
    "serde",
] }
revm-context = { version = "5.0.0", default-features = false, features = [
    "serde",
] }
revm-context-interface = { version = "5.0.0", default-features = false, features = [
    "serde",
] }
revm-database = { version = "4.0.1", default-features = false, features = [
    "serde",
] }
revm-handler = { version = "5.0.0", default-features = false, features = [
    "serde",
] }
revm-interpreter = { version = "20.0.0", default-features = false, features = [
    "serde",
] }
revm-primitives = { version = "19.1.0", default-features = false, features = [
    "serde",
] }
revm-state = { version = "4.0.1", default-features = false, features = [
    "serde",
] }
rocksdb = "0.21.0"
# 0.8.2 doesn't build with Rust 1.87. Remove `=` once
# https://github.com/linera-io/linera-protocol/issues/4742 is resolved.
ruzstd = "=0.8.1"
scylla = "~1.1.0"
semver = "1.0.22"
serde = { version = "1.0.197", features = ["derive"] }
serde-command-opts = "0.1.1"
serde-name = "0.2.1"
serde-reflection = "0.3.6"
serde-wasm-bindgen = "0.6.5"
serde_bytes = "0.11.14"
serde_json = "1.0.114"
serde_with = { version = "3", default-features = false, features = [
    "alloc",
    "macros",
] }
serde_yaml = "0.9.34"
sha3 = "0.10.8"
similar-asserts = "1.5.0"
sqlx = "0.8"
static_assertions = "1.1.0"
stdext = "0.3.3"
syn = "2.0.52"
sync_wrapper = { version = "1.0.1", features = ["futures"] }
sysinfo = "0.33.1"
tempfile = "3.20.0"
test-case = "3.3.1"
test-log = { version = "0.2.15", default-features = false, features = [
    "trace",
] }
test-strategy = "0.3.1"
thiserror = "1.0.65"
thiserror-context = "0.1.1"
tikv-jemallocator = "0.6.0"
tokio = "1.36.0"
tokio-stream = "0.1.14"
tokio-test = "0.4.3"
tokio-util = "0.7.10"
toml = "0.8.10"
tonic = { version = "0.14", default-features = false }
tonic-build = { version = "0.14", default-features = false }
tonic-health = "0.14"
tonic-prost = "0.14"
tonic-prost-build = { version = "0.14", default-features = false }
tonic-reflection = "0.14"
tonic-web = "0.14"
tonic-web-wasm-client = "0.8.0"
tower = "0.4.13"
tower-http = "0.6.6"
tracing = { version = "0.1.40", features = ["release_max_level_trace"] }
tracing-chrome = "0.7.2"
tracing-opentelemetry = "0.31.0"
tracing-subscriber = { version = "0.3.18", default-features = false, features = [
    "env-filter",
] }
tracing-web = "0.1.3"
trait-set = "0.3.0"
trait-variant = "0.1.1"
tsify = { version = "0.5.5", default-features = false, features = ["js"] }
url = "2.4"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "=0.4.50"
wasm-bindgen-test = "0.3.42"
wasm-instrument = { package = "linera-wasm-instrument", version = "0.4.0-linera.1" }
wasmer = { package = "linera-wasmer", version = "4.4.0-linera.7", default-features = false }
wasmer-compiler-singlepass = { package = "linera-wasmer-compiler-singlepass", version = "4.4.0-linera.7", default-features = false, features = [
    "std",
    "unwind",
    "avx",
] }
wasmtime = { version = "25.0.0", default-features = false, features = [
    "cranelift",
    "runtime",
    "std",
] }
web-sys = "0.3.69"
web-thread-pool = "0.1.0"
web-thread-select = "0.2.0"
web-time = "1.1.0"
wit-bindgen = "0.24.0"
zstd = "0.13.2"

linera-base = { version = "0.16.0", path = "./linera-base" }
linera-chain = { version = "0.16.0", path = "./linera-chain" }
linera-client = { version = "0.16.0", path = "./linera-client", default-features = false }
linera-core = { version = "0.16.0", path = "./linera-core", default-features = false }
linera-ethereum = { version = "0.16.0", path = "./linera-ethereum", default-features = false }
linera-execution = { version = "0.16.0", path = "./linera-execution", default-features = false }
linera-faucet-client = { version = "0.16.0", path = "linera-faucet/client" }
linera-faucet-server = { version = "0.16.0", path = "linera-faucet/server" }
linera-indexer = { version = "0.16.0", path = "./linera-indexer/lib" }
linera-indexer-graphql-client = { version = "0.16.0", path = "./linera-indexer/graphql-client" }
linera-indexer-plugins = { version = "0.16.0", path = "./linera-indexer/plugins" }
linera-metrics = { version = "0.16.0", path = "./linera-metrics" }
linera-persistent = { version = "0.16.0", path = "./linera-persistent" }
linera-rpc = { version = "0.16.0", path = "./linera-rpc" }
linera-sdk = { version = "0.16.0", path = "./linera-sdk" }
linera-sdk-derive = { version = "0.16.0", path = "./linera-sdk-derive" }
linera-service = { version = "0.16.0", path = "./linera-service", default-features = false }
linera-service-graphql-client = { version = "0.16.0", path = "./linera-service-graphql-client" }
linera-storage = { version = "0.16.0", path = "./linera-storage", default-features = false }
linera-storage-service = { version = "0.16.0", path = "./linera-storage-service", default-features = false }
linera-version = { version = "0.16.0", path = "./linera-version" }
linera-views = { version = "0.16.0", path = "./linera-views", default-features = false }
linera-views-derive = { version = "0.16.0", path = "./linera-views-derive" }
linera-witty = { version = "0.16.0", path = "./linera-witty" }
linera-witty-macros = { version = "0.16.0", path = "./linera-witty-macros" }

amm = { path = "./examples/amm" }
call-evm-counter = { path = "./examples/call-evm-counter" }
counter = { path = "./examples/counter" }
counter-no-graphql = { path = "./examples/counter-no-graphql" }
crowd-funding = { path = "./examples/crowd-funding" }
ethereum-tracker = { path = "./examples/ethereum-tracker" }
fungible = { path = "./examples/fungible" }
hex-game = { path = "./examples/hex-game" }
matching-engine = { path = "./examples/matching-engine" }
meta-counter = { path = "./linera-sdk/tests/fixtures/meta-counter" }
native-fungible = { path = "./examples/native-fungible" }
non-fungible = { path = "./examples/non-fungible" }
publish-read-data-blob = { path = "./linera-sdk/tests/fixtures/publish-read-data-blob" }
social = { path = "./examples/social" }
time-expiry = { path = "./linera-sdk/tests/fixtures/time-expiry" }

[workspace.dependencies.aws-config]
default-features = false
version = "1.6.3"

[workspace.dependencies.aws-sdk-dynamodb]
default-features = false
features = ["rt-tokio", "rustls"]
version = "1.88.0"

[profile.release]
lto = "thin"
debug = true

[profile.bench]
debug = true

# This section is experimental and requires to build `cargo-all-features` from the fork
# repository: https://github.com/ma2bd/cargo-all-features
[workspace.metadata.cargo-all-features]
skip_optional_dependencies = true
max_combination_size = 1

# Make sure to compile VMs with high optimization level
[profile.dev.package.linera-wasmer]
opt-level = 3

[profile.dev.package.wasmtime]
opt-level = 3

[workspace.metadata.spellcheck]
config = "spellcheck-cfg.toml"

[workspace.lints.clippy]
doc_link_with_quotes = "deny"
filter_map_next = "deny"
iter_filter_is_some = "deny"
large_futures = "deny"
large_stack_arrays = "deny"
large_types_passed_by_value = "deny"
macro_use_imports = "deny"
manual_instant_elapsed = "deny"
manual_is_power_of_two = "deny"
manual_is_variant_and = "deny"
map_unwrap_or = "deny"
mismatching_type_param_order = "deny"
naive_bytecount = "deny"
non_std_lazy_statics = "deny"
range_minus_one = "deny"
range_plus_one = "deny"
ref_option_ref = "deny"
str_split_at_newline = "deny"
