[workspace]
resolver = "2"
members = [
    "amm",
    "counter",
    "crowd-funding",
    "fungible",
    "llm",
    "matching-engine",
    "meta-counter",
    "native-fungible",
    "non-fungible",
    "social",
]

[workspace.dependencies]
assert_matches = "1.5.0"
async-graphql = { version = "7.0.2", default-features = false }
base64 = "0.22.0"
bcs = "0.1.3"
candle-core = "0.4.1"
candle-transformers = "0.4.1"
futures = "0.3.24"
futures-util = "0.3.26"
getrandom = { version = "0.2.12", default-features = false, features = ["custom"] }
hex = "0.4.3"
linera-sdk = { path = "../linera-sdk" }
linera-views = { path = "../linera-views", default-features = false }
log = "0.4.20"
num-bigint = "0.4.3"
num-traits = "0.2.16"
rand = "0.8.5"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
sha3 = "0.10.8"
tokenizers = { git = "https://github.com/christos-h/tokenizers", default-features = false, features = ["unstable_wasm"] }
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread"] }
webassembly-test = "0.1.0"

counter = { path = "./counter" }
crowd-funding = { path = "./crowd-funding" }
fungible = { path = "./fungible" }
native-fungible = { path = "./native-fungible" }
non-fungible = { path = "./non-fungible" }
amm = { path = "./amm" }
matching-engine = { path = "./matching-engine" }

[profile.release]
debug = true
lto = true
opt-level = 'z'
strip = 'debuginfo'

[profile.bench]
debug = true

# Needed to compile Witty on `wasm32-unknown-unknown`.  See
# https://github.com/wasmerio/wasmer/pull/4546
[patch.crates-io.wasmer]
version = "4.2.8"
git = "https://github.com/wasmerio/wasmer"
rev = "5800991767bc71a38dc4fc7e287cf451982a75a2"

[patch.crates-io.wasmer-middlewares]
version = "4.2.8"
git = "https://github.com/wasmerio/wasmer"
rev = "5800991767bc71a38dc4fc7e287cf451982a75a2"
