[workspace]
resolver = "2"
members = [
  "amm",
  "counter",
  "crowd-funding",
  "ethereum-tracker",
  "fungible",
  "gen-nft",
  "hex-game",
  "llm",
  "matching-engine",
  "meta-counter",
  "native-fungible",
  "non-fungible",
  "rfq",
  "social",
]

[workspace.dependencies]
alloy = { version = "0.9.2", default-features = false }
assert_matches = "1.5.0"
async-graphql = { version = "=7.0.2", default-features = false }
base64 = "0.22.0"
bcs = "0.1.3"
candle-core = "0.4.1"
candle-transformers = "0.4.1"
futures = "0.3.24"
futures-util = "0.3.26"
getrandom = { version = "0.2.12", default-features = false, features = [
  "custom",
] }
hex = "0.4.3"
linera-sdk = { path = "../linera-sdk" }
linera-views = { path = "../linera-views", default-features = false }
log = "0.4.20"
num-bigint = "0.4.3"
num-traits = "0.2.16"
rand = "0.8.5"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
sha3 = "0.10.8"
test-log = { version = "0.2.15", default-features = false, features = [
  "trace",
] }
tokenizers = { git = "https://github.com/christos-h/tokenizers", default-features = false, features = [
  "unstable_wasm",
] }
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread"] }

amm = { path = "./amm" }
counter = { path = "./counter" }
crowd-funding = { path = "./crowd-funding" }
ethereum-tracker = { path = "./ethereum-tracker", features = ["ethereum"] }
fungible = { path = "./fungible" }
matching-engine = { path = "./matching-engine" }
native-fungible = { path = "./native-fungible" }
non-fungible = { path = "./non-fungible" }

[profile.release]
debug = true
lto = true
opt-level = 'z'
strip = 'debuginfo'

[profile.bench]
debug = true
